# tinytinyhttpd

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.mvc  Makefile.w32  README.md  README.mkd  XmlRpcHttpd.cpp  XmlRpcHttpd.h  XmlRpcUtils.cpp  XmlRpcUtils.h  XmlRpcValue.h  aclocal.m4  config.h.in  configure  configure.ac  example.conf  httpd.cxx  httpd.h  index.html  main.cpp  main.cxx  utils.cxx  utils.h
examples/redmine/: cgi_process.rb.diff  redmine.conf
examples/sinatra/: dispatch.cgi  foo.rb  sinatra.conf
examples/websocket/: websocket.cgi  websocket.html
examples/wscript/: cgi.js  wscript.conf
m4/: pthread.m4  sendfile.m4
